--- a/app/src/main/res/layout/bitcoin_value_widget.xml
+++ b/app/src/main/res/layout/bitcoin_value_widget.xml
@@ -1,21 +1,37 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     style="@style/Widget.BitcoinWidget.AppWidget.Container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#00FFFFFF"
     android:theme="@style/Theme.BitcoinWidget.AppWidgetContainer">
 
-    <TextView
-        android:id="@+id/appwidget_text"
-        style="@style/Widget.BitcoinWidget.AppWidget.InnerView"
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:contentDescription="@string/appwidget_text"
-        android:text="@string/appwidget_text"
+        android:layout_marginEnd="151dp"
+        android:layout_marginBottom="683dp"
+        android:progressBackgroundTint="@color/white" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_alignParentLeft="true"
+        android:text="btc to usd :"
+        android:textColor="@color/white" />
+
+    <TextView
+        android:id="@+id/bitcoinPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView"
+        android:textColor="@color/white"
         android:textSize="24sp"
-        android:textStyle="bold|italic" />
+        tools:text="TextView" />
+
 </RelativeLayout>
